correct spacing

--- a/lean/application.whiteboard/src/app/toolbar/toolbar.component.scss
+++ b/lean/application.whiteboard/src/app/toolbar/toolbar.component.scss
@@ -1,6 +1,6 @@
 .toolbar {
    position: fixed;
-   top: 0px;
+   top: 10px;
    left: 10px;
    background: #f5f5f5;
    border-radius: 32px;
